k8s/litter.staging.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service.name: litter-staging
  name: litter-staging
  namespace: staging
spec:
  ports:
    - name: "litter-port"
      port: 8888
      targetPort: litter-http
  selector:
    deployment.name: litter-staging

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litter-staging
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment.name: litter-staging
  template:
    metadata:
      labels:
        deployment.name: litter-staging
    spec:
      containers:
      - name: litter
        image: gitlab.lnu.se:5050/2dv013/student/team-2023-01-burmese/litter-application:staging-0.2.0
        ports:
          - containerPort: 3000
            name: litter-http
      imagePullSecrets:
      - name: regcred
