k8s/litter.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service.name: litter
  name: litter
spec:
  ports:
    - name: "litter-port"
      port: 8888
      targetPort: litter-http
  selector:
    deployment.name: litter
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litter
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment.name: litter
  template:
    metadata:
      labels:
        deployment.name: litter
    spec:
      containers:
      - name: litter
        image: gitlab.lnu.se:5050/2dv013/student/team-2023-01-burmese/litter-application/litter-application:production-0.2.0
        ports:
          - containerPort: 3000
            name: litter-http
      imagePullSecrets:
      - name: regcred
