k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod" 
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: litter
                port:
                  number: 8888
  tls:  # TLS config
    - hosts:
        - "cscloud7-103.lnu.se"
      secretName: staging-tls-secret
